--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>my-runner</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <title>Subway Runner Clone</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background-color: #000;
+        }
+        canvas {
+            display: block;
+        }
+    </style>
 </head>
-<body style="overflow:hidden">
-<script src="src/main.js" type="module"></script>
+<body>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
