--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="site-js/surfer.js"></script>
 </body>
 </html>
